# ludotheque

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  biome.json  fly.toml  pyproject.toml
.github/workflows/: fly.yml  python.yml
docs/: vie_du_compte.md
setup/: nginx.conf  start.sh
src/api/: bookings.py  config.py  crawl.py  fakedata.py  gsheets.py  item_stats.py  items.py  ledger.py  loans.py  main.py  models.py  pwmodels.py  system.py  users.py  webcalendar.py
src/api/templates/: email_adhesion.txt  email_retard.txt  email_suppression.txt
src/api/tests/: conftest.py  test_bookings.py  test_calendar.py  test_categories.py  test_items.py  test_ledger.py  test_loans.py  test_pictures.py  test_rights.py  test_sendmail.py  test_system.py  test_users.py
src/scripts/: bgg.py  cli.py  crawl.py  dump_create.py  fakedata.py  myludo.py  sql_queries.txt
src/tests_api/: conftest.py  test_bookings.py  test_categories.py  test_items.py  test_ledger.py  test_loans.py  test_pictures.py  test_system.py  test_users.py
src/webui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
src/webui/src/: App.tsx  main.tsx  styles.css  theme.tsx
src/webui/src/api/: calls.ts  hooks.ts  models.ts
src/webui/src/components/: BGGScore.tsx  DraggableImage.tsx  EmblaCarousel.tsx  EmblaCarouselArrows.tsx  ItemImage.tsx  NextOpening.tsx  age_chip.tsx  confirm_dialog.tsx  error_boundary.tsx  image_chooser.tsx  inventory_item.tsx  itemIdBox.tsx  item_search.tsx  loading.tsx  loan.tsx  loan_item_table.tsx  mini_item.tsx  mini_item_history.tsx  mini_user.tsx  myludoScore.tsx  profile.tsx  random_colors.tsx  short_item.tsx  short_user.tsx  sidemenu.tsx  stats_card.tsx  topbar.tsx  user.tsx  user_history.tsx  user_loans.tsx  user_search.tsx
src/webui/src/hooks/: api.ts  global_store.ts  useConfirm.tsx  useOnlineStatus.ts  useSessionStorage.ts
src/webui/src/models/: account.ts  api.ts  item.ts  loan.ts
src/webui/src/pages/: config.tsx  create_user.tsx  documents.tsx  inventory.tsx  inventoryrev.tsx  item.tsx  item_edit.tsx  item_list.tsx  item_view.tsx  late_email.tsx  late_loans.tsx  ledger.tsx  lessloaned.tsx  loan.tsx  loan_close.tsx  main.tsx  main_admin.tsx  not_found.tsx  stats.tsx  user_create.tsx  user_edit.tsx  user_history.tsx  user_list.tsx  user_myaccount.tsx  user_view.tsx
