[project]
name = "api"
description = "Ludotheque"
authors = [
    {name = "Benoît", email = "benoit.dien@gmail.com"},
]
dependencies = [
    "peewee~=3.17",
    "requests~=2.32",
    "fastapi~=0.115",
    "uvicorn[standard]~=0.32",
    "python-multipart~=0.0",
    "Pillow~=11.0",
    "cachetools~=5.5",
    "gspread~=6.1",
    "apscheduler~=3.10",
    "jinja2~=3.1",
]
requires-python = ">=3.11"
license = {text = "GPL2"}
dynamic = [ "version" ]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "C", "W", "RUF", "UP", "SIM", "PIE", "PLE", "S", "G", "PT", "RET"]
ignore = ["E402", "E501"]
# E402: module level import not at top of file
# E501: Line too loog

[tool.ruff.lint.mccabe]
max-complexity = 28

[tool.ruff.lint.per-file-ignores]
"src/tests_api/*.py" = ["S101"]
"src/api/*.py" = ["B008"]
# S101: Use of assert
# B008: Do not perform function call `Depends` in argument defaults

[tool.pytest.ini_options]
addopts = "--ignore=__pypackages__ --cov=api --cov-report html"

[tool.pdm]
[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
build = {shell = "cd src/webui && pnpm run build"}
api = {shell = "cd src/api && uvicorn main:app --reload"}
api_prod = {shell = "cd src/api && uvicorn main:app --uds /tmp/uvicorn.sock"}
webui = {shell = "cd src/webui && pnpm run dev --host 0.0.0.0"}
restore = { shell = "rm -rf storage/img storage/thumb storage/ludotheque.db; curl -H \"Authorization: Bearer $LUDOTHEQUE_APIKEY\" -s https://ludotheque.fly.dev/api/backup | tar x" }
outdated = "pdm update --dry-run --unconstrained --top"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "httpx~=0.27",
    "pytest-cov~=6.0",
    "mypy~=1.13",
    "freezegun~=1.5",
]
cli = [
    "questionary>=2.0.1",
    "oidc-client>=0.2.6",
]
