[project]
name = "api"
description = "Ludotheque"
authors = [
    {name = "Benoît", email = "benoit.dien@gmail.com"},
]
dependencies = [
    "peewee>=3.17.8",
    "requests>=2.32.3",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.33.0",
    "python-multipart>=0.0.19",
    "Pillow>=11.0.0",
    "cachetools>=5.5.0",
    "gspread>=6.1.4",
    "apscheduler>=3.11.0",
    "jinja2>=3.1.4",
    "sentry-sdk[fastapi]>=2.42.0",
    "vacances-scolaires-france>=0.10.0",
    "jours-feries-france>=0.7.0",
]
requires-python = ">=3.13"
license = {text = "GPL2"}
version = "0.0.0"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "C", "W", "RUF", "UP", "SIM", "PIE", "PLE", "S", "G", "PT", "RET", "FAST", "I"]
ignore = ["E402", "E501"]
# E402: module level import not at top of file
# E501: Line too loog

[tool.ruff.lint.mccabe]
max-complexity = 28

[tool.ruff.lint.per-file-ignores]
"src/api/tests/*.py" = ["S101"]
"src/api/*.py" = ["B008"]
# S101: Use of assert
# B008: Do not perform function call `Depends` in argument defaults

[tool.taskipy.tasks]
build = "cd src/webui && pnpm run build"
api = "cd src/api && uvicorn main:app --reload"
api_prod = "cd src/api && uvicorn main:app --uds /tmp/uvicorn.sock"
webui = "cd src/webui && pnpm run dev --host 0.0.0.0"
restore = "rm -rf storage/img storage/thumb storage/ludotheque.db; curl -H \"Authorization: Bearer $LUDOTHEQUE_APIKEY\" -s https://ludotheque.fly.dev/api/backup | tar x"

[dependency-groups]
dev = [
    "ruff>=0.8.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "freezegun>=1.5.1",
    "taskipy>=1.14.1",
    "questionary>=2.0.1",
    "oidc-client>=0.2.6",
    "diskcache>=5.6.3",
]
